[project]
name = "link-prediction"
version = "0.1.0"
description = "Link Prediction project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "networkx>=3.5",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "plotly>=6.3.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "sentence-transformers>=3.0.0",
    "jupyter>=1.1.1",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
